# responsible-datascience-ws

./: .gitignore  ML_analysis.ipynb  ML_analysis_cleaner.ipynb  ML_intro.ipynb  Makefile  README.md  conda_create.txt  install_kernels.sh  ml_automl.yaml  ml_data_validation.yaml  ml_eda.yaml  ml_workshop.yaml  pyproject.toml  template_notebook.ipynb
auto-ml/: auto-ml.ipynb
clean_code/: creating_functions.ipynb
data_validation/: readme.md  split_analysis.ipynb
improve_the_model/: data_hyperparam_tuning.ipynb  model_utils.py
misc/: illustrations.ipynb  train_test_split.ipynb
reproducible-ml/: clean_modeling.ipynb  template_notebook.ipynb
sklearn_intro/: ML_analysis.ipynb
src/: model_utils.py
src/workshop/: model_utils.py  transform.py
