[project]
name = "workshop"
version = "0.0.1"
authors = [
  { name="Marco Bertani-Økland", email="mbertani@gmail.com" },
  { name="Katalin Terezia Ferenc", email="k.t.ferenc@ncmm.uio.no" },
]
description = "workshop utilities"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]